[project]
name = "dp"
version = "0.0.2"
description = "Minimal implementation of Diffusion Policy"
readme = "README.md"
authors = [
    { name = "nomutin", email = "nomura0508@icloud.com" }
]
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.31.0",
    "einops>=0.8.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pydoclint>=0.5.9",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.1",
]
train = [
    "lightning[extra]>=2.4.0",
    "torchgeometry>=0.1.2",
    "torchvision>=0.20.0",
    "wandb>=0.18.5",
    "wget>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["CPY001",]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"src/dp/core.py" = ["PLR0913"]
"example/*" = ["DOC201"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pydoclint]
style = 'numpy'
exclude = '\.git|\.ruff_cache|\.mypy_cache|\.venv'
